public enum ActionType {
    TakeChip,
    BuyCard
}
